--- a/package.json
+++ b/package.json
@@ -21,9 +21,18 @@
   "homepage": "https://github.com/Vaish568/React_App#readme",
   "dependencies": {
     "@babel/plugin-transform-runtime": "^7.18.6",
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/material": "^5.9.3",
+    "@popperjs/core": "^2.11.5",
+    "@reduxjs/toolkit": "^1.8.3",
+    "bootstrap": "^5.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
+    "redux": "^4.2.0",
     "webpack-dev-server": "^4.9.2"
   },
   "devDependencies": {
