--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "redux": "^4.2.0",
+    "redux-persist": "^6.0.0",
     "webpack-dev-server": "^4.9.2",
     "yup": "^0.32.11"
   },
